# MathImage

./: .gitignore  Cargo.toml  plan.md  tauri.conf.json  tauri.conf.json.backup
.cunzhi-memory/: context.md  metadata.json
.github/workflows/: manual-build.yml  release.yml
MathImage.app/Contents/: Info.plist
MathImage.app/Contents/Resources/: icon.icns
MathImage_v2.app/Contents/: Info.plist
icons/: icon.icns
src/: main.rs
src-tauri/capabilities/: main.json
